31-06-2004 Qball <Qball@qballcow.nl>
	* Track window size changes and grow/shrink title box accordingly
	* browse by search now opens an old search if the same search is done
	again.
	* removed default focus from close button in song-browser
	* Added buttons for repeat/shuff
	* mainwindow 20px smaller
	* Made mainwindow 20 pixels smaller
	* changed configure in to depend on gtk+-2.4 and up
	* Commented most parts of song-browser.c
	* added error_Checks to song-browser.c
	* removed dead code
	* Bump version in glade
	* Temporary icon for playlist and pref. in main gui 
	* Added keybinding to playlist (p) and preferences (ctrl-p)
	* When song-browser opened check if the current field is filled and
	fill it, if not.


30-06-2004 Qball <Qball@qballcow.nl>
	* Fixed double click on playlist. it now adds it to the list.
	* info.old_pos is reset on disconnect
	* Added comment to the playlist2.c 
	* Added check_for_errors after every mpd_finishCommand
	* Added check_connection_state at the beginnning of every function.
	* added a Check connection_state function
	* Added remote fetching and parsing of .m3u/.pls files
	* Added dnd on open-location window and button
	* Saving playlist
	* Removed lots of code for old playlist.
	* Remove src/playlist.c
	* removed playlist code from glade/gmpc.glade

29-06-2004 Qball <Qball@qballcow.nl>
	* added timeout.. half a second after you stop typing in filter entry,
	the tree is filtered.
	* Added temporary open location window
	* after updating the gui (in filling song-browser) check if the user
	closed the window
	* Added icons to the window


28-06-2004 Qball <Qball@qballcow.nl>
	* Added a song-browser window
	* Added images for song/stream to playlist
	* song-browser reloads if playlist changes.
	* Added custom stock icons.
	* Adding from song browser now completely works.

27-06-2004 Qball <Qball@qballcow.nl>
	* Changed move function so it works with filtered playlist
	* Force update after changes to playlist (delete and move)