@@ -98,6 +98,7 @@ Search Results</property>
 	      <property name="enable_search">True</property>
 	      <signal name="row_expanded" handler="sb_row_expanded" last_modification_time="Mon, 28 Jun 2004 17:16:11 GMT"/>
 	      <signal name="row_activated" handler="sb_row_activate_click" last_modification_time="Tue, 29 Jun 2004 14:07:14 GMT"/>
+	      <signal name="key_press_event" handler="sb_key_pressed" last_modification_time="Fri, 02 Jul 2004 11:30:36 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -116,6 +117,7 @@ Search Results</property>
 	  <child>
 	    <widget class="GtkEntry" id="search_entry">
 	      <property name="visible">True</property>
+	      <property name="tooltip" translatable="yes">Enter search query  &lt;ctrl+l to grab focus&gt;</property>
 	      <property name="can_focus">True</property>
 	      <property name="editable">True</property>
 	      <property name="visibility">True</property>
@@ -125,6 +127,7 @@ Search Results</property>
 	      <property name="invisible_char" translatable="yes">*</property>
 	      <property name="activates_default">False</property>
 	      <signal name="activate" handler="sb_do_search" last_modification_time="Tue, 29 Jun 2004 15:17:59 GMT"/>
+	      <accelerator key="l" modifiers="GDK_CONTROL_MASK" signal="grab_focus"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
